@@ -12,23 +12,20 @@
 0501=劳动节
 0504=青年节
 0601=儿童节
+0701=建党节
 0801=建军节
 0910=教师节
 0918=九一八
 1001=国庆节
-1006=老人节
 1224=平安夜
-1123=生日
 1225=圣诞节
+1123=生日
 
-#公历
+#农历
 [LUNAR]
 0101=春节
 0115=元宵
 0505=端午
-0624=火把节
-0625=火把节
-0626=火把节
 0707=七夕
 0715=中元节
 0815=中秋
